--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,44 @@
-<p>register works!</p>
+<p style="font-size: xx-large">REGISTER HERE</p>
+<form [formGroup]="registerform" (ngSubmit)="register()">
+    <div>
+        <label for="name">Name:</label>
+        <input type="email" class="form-control col-md-4" id="email" placeholder="Enter Name" formControlName="name">
+        <div *ngIf="registerform.controls?.name?.invalid">
+                
+            <span class="hass-error-message" *ngIf="registerform.controls?.name?.errors?.pattern">
+            <p class="validation">*Please Enter valid Name.</p>
+            </span>
+        </div>
+        </div>
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" class="form-control col-md-4" id="email" placeholder="Enter email" formControlName="email">
+      <div *ngIf="registerform.controls?.email?.invalid">
+              
+        <span class="hass-error-message" *ngIf="registerform.controls?.email?.errors?.pattern">
+          <p class="validation">*Please enter valid Firstname.</p>
+        </span>
+      </div>
+    </div>
+    <div>
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control col-md-4" id="pwd" placeholder="Enter password" formControlName="pswd">
+      <div *ngIf="registerform.controls?.pswd?.invalid">
+                        
+        <span class="hass-error-message" *ngIf="registerform.controls?.pswd?.errors?.minlength">
+          <p class="validation">*Minimum 5 character.</p>
+        </span>
+        <span class="hass-error-message" *ngIf="registerform.controls?.pswd?.errors?.maxlength">
+          <p class="validation">*Maximum 10 character.</p>
+        </span>
+        
+      </div>
+    </div>  
+    <div>
+        <label for="gender">Gender:</label><br>
+            <input type="radio" formControlName="gender" value="male"> Male<br>
+            <input type="radio" formControlName="gender" value="female"> Female<br>
+            <input type="radio" formControlName="gender" value="other"> Other
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
